--- a/formulaire Employe.html
+++ b/formulaire Employe.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
         <meta charset="UTF-8" />
-<link rel="stylesheet" href="./formulaire.css" />
+<link rel="stylesheet" href="./css/formulaire.css" />
         <title>Mon premier formulaire HTML</title>
 </head>
 <body>
